dynamic component practice

--- a/src/app/blog-tile/blog-tile.component.html
+++ b/src/app/blog-tile/blog-tile.component.html
@@ -1,4 +1,5 @@
 <div class="card" (click)="goToBlog(blog.id)">
     <h4>{{ blog.title }}</h4>
     <p>{{ blog.body }}</p>
+    <h6>Click for more Information...</h6>
 </div>
