--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <div class="headings">
     <a routerLink="/">Home</a>
     <a routerLink="/blogs">Blog List</a>
+    <a routerLink="/register">Register</a>
 </div>
