--- a/src/app/registration-form/registration-form.component.html
+++ b/src/app/registration-form/registration-form.component.html
@@ -1,21 +1,44 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-7 left-column">
             <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email Address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email">
+                    <input 
+                        type="email" 
+                        class="form-control" 
+                        id="exampleInputEmail1" 
+                        aria-describedby="emailHelp"
+                        placeholder="Enter email"
+                        formControlName="email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <br>
+
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input 
+                        type="password" 
+                        class="form-control" 
+                        id="exampleInputPassword1" 
+                        placeholder="Password"
+                        formControlName="password">
                 </div>
                 <br>
+
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+        </div>
+        <div class="col-md-4">
+            <h4>Registered Users</h4>
+            <div *ngFor="let user of users" class="card">
+                <h5 
+                    *ngIf="user" 
+                    #cards
+                    (click)="deleteUser(user.email)">
+                    {{ user.email }}</h5>
+            </div>
         </div>
     </div>
 </div>
