reactive forms practice

--- a/src/app/registration-form/registration-form.component.html
+++ b/src/app/registration-form/registration-form.component.html
@@ -32,6 +32,7 @@
         </div>
         <div class="col-md-4">
             <h4>Registered Users</h4>
+            <small class="small">Click to Delete User from System</small>
             <div *ngFor="let user of users" class="card">
                 <h5 
                     *ngIf="user" 
