--- a/src/app/registration-form/registration-form.component.css
+++ b/src/app/registration-form/registration-form.component.css
@@ -6,10 +6,14 @@
     border-radius: 15px; */
 }
 
-h4 {
+h4, .small {
     margin-left: 25px;
 }
 
 .left-column {
     margin-right: 20px;
+}
+
+label {
+    margin-bottom: 5px;
 }
