--- a/src/app/registration-form/registration-form.component.html
+++ b/src/app/registration-form/registration-form.component.html
@@ -38,10 +38,11 @@
         <div class="col-md-4">
             <h4>Registered Users</h4>
             <small class="small">Click to Delete User from System</small>
-            <div *ngFor="let user of users" class="cards" (click)="deleteUser(user.email)">
+            <div *ngFor="let user of users" class="cards">
                 <h5 
                     *ngIf="user" 
-                    #cards>
+                    #cards
+                    (click)="deleteUser(user.email)">
                     {{ user.email }}</h5>
             </div>
         </div>
