fixed user delete function

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,10 @@
             <app-create-blog>
             </app-create-blog>
             <br>
-            <ng-template appPlaceholderDirective></ng-template>
+            <ng-template 
+                appPlaceholderDirective
+                >
+            </ng-template>
         </div>
 
         <div class="col-md-4 right-column">
