--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-md-5 card left-column">
+        <div *ngIf="blog" class="col-md-5 card left-column">
             <h4>{{ blog.title }}</h4>
             <hr>
             <p>{{ blog.body }}</p>
