--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,9 +1,9 @@
 <hr>
 
 <div class="container">
-    <div class="row">
+    <div *ngIf="blog" class="row">
 
-        <div *ngIf="blog" class="col-md-5 card left-column">
+        <div class="col-md-5 card left-column">
             <h4>{{ blog.title }}</h4>
             <hr>
             <p>{{ blog.body }}</p>
